feat: adds create, update and delete use cases
